--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -1,3 +1,15 @@
 #board {
     z-index: 98;
 }
+
+#circularcursor {
+    background-color: transparent;
+    border: 1px solid white;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+}
