--- a/src/Compoenets/Header.css
+++ b/src/Compoenets/Header.css
@@ -6,3 +6,15 @@
     z-index: 99;
     color: aliceblue;
 }
+
+#circularcursor {
+    background-color: transparent;
+    border: 1px solid black;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+}
